--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@devexpress/dx-react-core": "^4.0.5",
     "@devexpress/dx-react-scheduler": "^4.0.5",
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
+    "redux-saga": "^1.2.3",
     "sass": "^1.68.0"
   },
   "devDependencies": {
