--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "redux-saga": "^1.2.3",
     "sass": "^1.68.0"
   },
