--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cloudinary": "^1.41.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -17,6 +18,10 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.2.0",
         "mongoose": "^8.0.0",
-        "nodemon": "^3.0.1"
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "nodemon": "^3.0.1",
+        "slugify": "^1.6.6",
+        "unidecode": "^0.1.8"
     }
 }
