--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "antd": "^5.9.4",
         "bootstrap": "^5.3.2",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.9.1",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.15.0",
