--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
         "@reduxjs/toolkit": "^1.9.7",
         "antd": "^5.9.4",
         "bootstrap": "^5.3.2",
+        "chart.js": "^4.4.2",
         "react": "^18.2.0",
         "react-bootstrap": "^2.9.1",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
+        "react-intersection-observer": "^9.10.2",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.15.0",
         "react-toastify": "^9.1.3",
